resources/css/layout.css
/* ... */
@keyframes pulse {
  0% {
    box-shadow: 0 0 0 0 rgba(16, 113, 255, 0.7);
  }

  70% {
    box-shadow: 0 0 0 10px rgba(16, 113, 255, 0);
  }

  100% {
    box-shadow: 0 0 0 0 rgba(16, 113, 255, 0);
  }
}

#contact_light_box_first_h5_div {
  text-align: center;
}

#contact_light_box_first_h5 {
  text-align: center;
}

#contact-lightbox #captchaResult {
  border: 1px solid #009;
  box-shadow: inset 0 0 0 1px cornflowerblue,
    inset 0 2px 3px 0 rgb(0 0 153 / 35%);
}

#contact_light_box_first_h5 {
  text-align: center;
  font-weight: bold;
  margin-bottom: 16px;
  color: #009;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 16px;
  font-size: 16px;
}

#contact-lightbox .gray-title {
  color: #818181;
}

#contact-lightbox {
  transition: opacity 0.1s ease-in 0s;
  opacity: 1;
  overflow-y: auto !important;
  overflow-x: hidden !important;
  display: inline-block;
  display: none;
  position: fixed !important;
  z-index: 1000;
  top: 0 !important;
  left: 0 !important;
  bottom: 0 !important;
  right: 0 !important;
}

.text-gold {
  color: var(--gold);
}

/* ---- new ---- */
.categories-header {
  flex-wrap: wrap;
}

.categories-header .align-end {
  align-items: center;
  width: 100%;
}

@media screen and (min-width: 600px) {
  .categories-header {
    flex-wrap: nowrap;
  }

  .categories-header .align-end {
    align-items: flex-end;
    width: fit-content;
  }
}

.header_img_bg {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  width: 100%;
  text-align: center;
  /* background: url("/resources/images/Lacuri-si-vopsele-emex.jpg"); */
  background-repeat: no-repeat;
  background-size: cover;
  margin-top: 0px;
  height: calc(100vw / 3.87);
}

@media screen and (min-width: 1024px) {
  #homepage-header {
    display: block;
  }
  #breadcrumbsContainerMobile {
    display: none;
  }
}

@media screen and (max-width: 1023px) {
  #homepage-header {
    display: none;
  }
  #breadcrumbsContainerMobile {
    display: block;
  }
}

#term_cond_header {
  background-image: url("resources/images/Termeni-si-conditii.jpg");
  margin-bottom: 16px;
}

#confidentialitate_header {
  background-image: url("resources/images/Confidentialitate-prelucrare-date.jpg");
  margin-bottom: 16px;
}

#retur_header {
  background-image: url("resources/images/Politica-de-retur.jpg");
  margin-bottom: 16px;
}

#faq_header {
  background-image: url("resources/images/Intrebari-frecvente-header.jpg");
  margin-bottom: 16px;
}

.header_img_bg h1 {
  font-size: 50px;
  margin: 0px;
  color: #ffffff;
  background-size: contain;
  background-repeat: no-repeat;
  height: 48%;
  padding: 10px 40px 0px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: bold;
  text-shadow: 0px 0px 5px #000000;
}

.hibc {
  padding: 30px 100px;
  position: relative;
}

.hibc:before,
.hibc:after {
  content: "";
  width: 100%;
  height: 8px;
  background-color: #ffffff;
  position: absolute;
  left: 0px;
  background: linear-gradient(
    to right,
    white 15%,
    rgba(255, 255, 255, 0) 30%,
    rgba(255, 255, 255, 0) 50%,
    rgba(255, 255, 255, 0) 70%,
    white 85%
  );
}

.hibc:after {
  margin-top: 20px;
}

.hibc:before {
  margin-top: -20px;
}

.hibcsc:after,
.hibcsc:before {
  content: "";
  width: 8px;
  height: calc(100% - 20px);
  background-color: #ffffff;
  position: absolute;
  top: 15px;
}

.hibcsc:before {
  left: 0px;
}

.hibcsc:after {
  right: 0px;
}

@media (max-width: 767px) {
  .hidden-xs {
    display: none;
  }
}

.autentificare-1 {
  transition: opacity 0.1s ease-in 0s;
  opacity: 0;
  display: none;
  position: fixed !important;
  z-index: 1000;
  top: 0 !important;
  left: 0 !important;
  bottom: 0 !important;
  right: 0 !important;
  width: 100vw;
  height: 100vh;
}

.autentificare-2 {
  display: block;
  height: 0;
  max-height: 100%;
  max-width: 100%;
  min-height: 100%;
  min-width: 100%;
  width: 0;
  margin: auto;
}

#tabs-content-big {
  margin-top: 15px;
}

.tabs .btn.active {
  background-color: var(--white);
  border: 1px solid var(--blue);
  outline: none;
  color: var(--blue);
}

#logoutButton {
  padding: 8px;
  /* color: var(--grey); */
  color: var(--grey) !important;
  text-align: center;
  padding: 8px;
  font-size: 1em;
  -webkit-transition: all 0.3s ease;
  -o-transition: all 0.3s ease;
  transition: all 0.3s ease;
  text-decoration: none;
  cursor: pointer;
  box-sizing: border-box;
}

#mobile-sidebar-open-backdrop {
  z-index: 1001;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  width: 100vw !important;
  height: 100vh !important;
  background-color: rgba(0, 0, 0, 0.5);
}

.overflow-y-hidden {
  overflow-y: hidden;
}

.marginbottom-0 {
  margin-bottom: 0px;
}

.paddingtop-0 {
  padding-top: 0px;
}

.height-43px {
  height: 43px;
}

.col-certifications {
  margin-left: 50px;
  max-width: 100%;
  display: flex;
  flex-direction: row;
  margin-top: 10px;
  align-items: center;
}

.certification-item-1 img,
.certification-item-2 img {
  max-width: 100%;
  height: auto;
  object-fit: contain;
}

@media screen and (max-width: 1024px) {
  .desktop-cart {
    display: none;
  }

  .mobile-cart {
    display: flex;
    flex-direction: column;
  }

  .certification-item-1 {
    width: 230px;
    height: 80px;
    margin-top: 5px;
  }

  .certification-item-2 {
    width: 83px;
    height: 83px;
    margin-left: 20px;
  }
}

@media screen and (min-width: 1025px) {
  .desktop-cart {
    display: table;
  }

  .mobile-cart {
    display: none;
    font-size: 18px;
  }

  .certification-item-1 {
    width: 258px;
    height: 90px;
    margin-top: 5px;
  }

  .certification-item-2 {
    width: 101px;
    height: 102px;
    margin-left: 50px;
  }
}

.quantity-selector {
  background-color: var(--white);
  border: 1px solid var(--lightgrey);
  border-radius: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 14px;
  padding: 4px 8px 6px;
  margin: 0 auto;
}
/* ... */

